assets/styles/block/_sections.scss
.events-layout .section-hero {
    overflow: hidden;
}

.section-subscribe {
    overflow: hidden;
}

// .events,
// .hyperlocal {
//     background-image: url('/uploads/rip-bottom-celeste.svg');
//     background-position: center;
//     background-size: cover;
// }

// .ghostnote,
// .staff {
//     background-image: url('/uploads/rip-both-celeste.svg');
//     background-position: center;
//     background-size: cover;
// }

.subscribe {
    overflow: hidden;
}

// section figure {
//     display: none;
// }

// @media screen and (min-width: 1024px) {
//     section figure {
//         display: block;
//     }
// }

// Black Sections
.about-layout #hero,
.about-layout #sponsors,
.events-single-layout #hero,
.events-single-layout #speakers,
.home-layout #makers,
.home-layout #sponsors,
#photographer {
    z-index: var(--index-9);
}

// Celeste Sections
.home-layout #hero,
#ghostnote,
#staff,
#subscribe {
    z-index: var(--index-4);
}

.ghostnote figure,
.makers figure,
.subscribe figure {
    display: none;
}

@media screen and (min-width: 768px) {
    .ghostnote figure,
    .makers figure,
    .subscribe figure {
        display: block;
    }
}

